# flexiv_trainer

./: .gitignore  CAMERA_RACE_FIX_PLAN.md  CAMERA_RGB_DEPTH_BACKEND_FLOW.md  CHANGES_REPORT.md  PR_DESCRIPTION.md  README.md  ROLLOUT_REFACTOR_PLAN.md  ROLLOUT_SMOOTHING_CHANGES.md  RTC_SESSION_NOTES.md  depth-visualization-lag-report.html  pyproject.toml  rtc_diagram.html
.github/actions/run-tests/: action.yml
.github/workflows/: ci.yml
backend/src/flexiv_trainer/: __main__.py  config.py  terminal.py
backend/src/flexiv_trainer/api/: __init__.py  app.py
backend/src/flexiv_trainer/cameras/: realsense.py
backend/src/flexiv_trainer/cli/: __init__.py  combine_episodes.py  record_data.py  teleop.py  train_policy.py
backend/src/flexiv_trainer/ddk/: service.py
backend/src/flexiv_trainer/jobs/: combine.py  train.py
backend/src/flexiv_trainer/observability/: __init__.py
backend/src/flexiv_trainer/runtime/: manager.py
backend/src/flexiv_trainer/teleop/: service.py
backend/src/flexiv_trainer/web/: app.js  index.html
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ExampleWorkflowCard.tsx  ModuleLoadingOverlay.tsx  ServerPathBrowserDialog.tsx
frontend/src/hooks/: useModuleBootstrap.ts
frontend/src/routes/: HomePage.tsx  TeleoperationPage.tsx  TrainingPage.tsx
frontend/src/routes/training/: ChoosePolicyPage.tsx  CombinedPreviewPage.tsx  LoadEpisodesPage.tsx  PreviewEpisodesPage.tsx  TrainingRunPage.tsx
notes/: single_pair_arm_changes.html
scripts/: cleanup-server.sh
src/flexivtrainer/: __init__.py  __main__.py  config.py  terminal.py
src/flexivtrainer/api/: __init__.py  app.py
src/flexivtrainer/api/routes/: __init__.py  datasets.py  rollout.py  system.py  (+2 more)
src/flexivtrainer/cameras/: realsense.py
src/flexivtrainer/cli/: __init__.py  combine_episodes.py  convert_bspline_dataset.py  merge_episodes.py  record_data.py  teleop.py  train_policy.py
src/flexivtrainer/data/: __init__.py  bspline.py  lerobot_io.py  recording_service.py
src/flexivtrainer/ddk/: service.py
src/flexivtrainer/jobs/: combine.py  convert_bspline_dataset.py  merge_episodes.py  train.py  train_policy.py
src/flexivtrainer/observability/: __init__.py  console.py
src/flexivtrainer/policies/: __init__.py  _shared.py  act.py  bspline_diffusion.py  diffusion.py  dit.py  pi0.py  rtc_diffusion.py  smolvla.py
src/flexivtrainer/rollout/: bspline_executor.py  gripper_executor.py  pose_interpolator.py  replay_episode.py  seam_blend.py  service.py  waypoint_executor.py
src/flexivtrainer/runtime/: manager.py
src/flexivtrainer/teleop/: end_effector.py  service.py
src/flexivtrainer/web/: app.js  index.html  styles.css
tests/: test_api_app.py  test_bspline.py  test_bspline_diffusion_policy.py  test_bspline_rollout.py  test_convert_bspline_dataset.py  test_datasets_api.py  test_end_effector.py  test_gripper_executor.py  test_lerobot_io.py  test_merge_episodes.py  test_observability.py  test_path_security.py  test_policies_schema.py  test_pose_interpolator.py  test_realsense_service.py  test_realsense_threading.py  test_recording_service.py  test_rollout_service.py  test_rollout_waypoint_executor.py  test_rtc_diffusion.py  test_runtime_manager.py  test_seam_blend.py  test_teleop_service.py  test_train_policy.py  test_training_api.py  test_training_service.py
(+8 files in other folders)
